--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,13 +35,15 @@ dependencies {
     implementation 'com.android.support:customtabs:27.1.0'
     implementation 'com.android.support:gridlayout-v7:27.1.0'
     implementation 'com.android.support:cardview-v7:27.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     // Circular Image View
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     // Firebase
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.firebase:firebase-core:11.8.0'
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.firebase:firebase-auth:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.google.firebase:firebase-crash:11.8.0'
+    implementation 'com.google.firebase:firebase-perf:11.8.0'
     // Firebase UI
     implementation 'com.firebaseui:firebase-ui-auth:3.2.2'
     // Displaying images
@@ -50,14 +52,16 @@ dependencies {
     implementation 'com.github.apl-devs:appintro:v4.2.2'
     // QR Scanner
     implementation 'me.dm7.barcodescanner:zbar:1.9.8'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    // Room
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    // GSON
+    implementation 'com.google.code.gson:gson:2.8.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 }
-
-
-
-
 
 apply plugin: 'com.google.gms.google-services'
