--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    // Support Library
     implementation 'androidx.core:core-ktx:0.2'
+    // Support Library
     implementation 'com.android.support:support-annotations:27.1.0'
     implementation 'com.android.support:support-v4:27.1.0'
     implementation 'com.android.support:support-v13:27.1.0'
@@ -53,10 +53,8 @@ dependencies {
     // QR Scanner
     implementation 'me.dm7.barcodescanner:zbar:1.9.8'
     // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-    // Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    //implementation "android.arch.persistence.room:runtime:1.0.0"
+    //kapt "android.arch.persistence.room:compiler:1.0.0"
     // GSON
     implementation 'com.google.code.gson:gson:2.8.2'
     testImplementation 'junit:junit:4.12'
