--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:1.2.31"
     implementation 'androidx.core:core-ktx:0.2'
     // Support Library
     implementation 'com.android.support:support-annotations:27.1.0'
@@ -51,6 +51,8 @@ dependencies {
     implementation 'me.dm7.barcodescanner:zbar:1.9.8'
     // GSON
     implementation 'com.google.code.gson:gson:2.8.2'
+    // Arrow Animator
+    implementation 'com.github.zagum:Android-ExpandIcon:1.2.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
