--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="android.max_aspect"
             android:value="2.1" />
@@ -45,7 +44,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".activity.ViewBook"
+            android:name=".activity.ViewBookActivity"
+            android:parentActivityName=".activity.MainActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.ViewProfile"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activity.SearchActivity"
             android:parentActivityName=".activity.MainActivity"
             android:screenOrientation="portrait" />
     </application>
